# quizik

./: .env.example  .gitignore  ARCHITECTURE_SPEC.md  Makefile  README.md  docker-compose.yml  fix_paths.py
backend/: Dockerfile  __init__.py  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 27d6ae90aac3_initial_schema.py  b2c4e8f1a3d5_phase2_auth_sessions_fuzzy.py  d4e6f8a2b1c3_add_groups.py  e5f7a9c2b4d6_session_settings_device_token.py  f6g8b0d1c3e5_add_telemetry_events.py  g7h9i1j2k3l4_add_is_imported_to_quizzes.py  h8i0j2k3l4m5_add_minigame_score.py  i9j1k3l4m5n6_add_google_auth.py  j0k2l4m5n6o7_add_image_url_to_questions.py  k1l3m5n6o7p8_add_minigame_type.py  l2m4n6o8p0q1_add_minigame_trigger.py  m3n5o7p9q1r2_add_session_advanced_settings.py  n4o6p8q0r2s3_add_session_bonuses.py  o5p7q9r1s2t3_add_bonus_unlock_mode.py  p6q8r0s2t4u5_add_partial_answers.py  q7r9s1t3u5v7_add_admin_and_codes.py  r8s0t2u4v6w8_add_minigame_config.py  s9t1u3v5w7x9_add_play_mode_to_sessions.py  u1v2w3x4y5z6_add_quiz_cover_image.py  v2w3x4y5z6a7_add_feedback.py  w3x4y5z6a7b8_enable_rls_on_all_tables.py  x4y5z6a7b8c9_add_public_and_tags_to_quizzes.py
backend/src/: config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
backend/src/importers/: __init__.py  base.py  csv_importer.py  docx_importer.py  factory.py  pdf_importer.py  xlsx_importer.py
backend/src/models/: __init__.py  answer.py  attempt.py  feedback.py  group.py  import_job.py  (+8 more)
backend/tests/: test_auth_service.py  test_evaluation.py  test_fuzzy.py
(+117 files in other folders)
